form section styled

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!-- navbar area end -->
     </div>
     <div class="header-slider-one">
-        <div class="header-area style-02 header-bg-03" style="background-image:url(assets/img/header-slider/bg-04.png);">
+        <div class="header-area style-02 header-bg-03" style="background-image:url(assets/img/header-slider/slider-01.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
@@ -143,7 +143,7 @@
                                 <span class="or">OR</span>
                                 <div class="header-buttom-content style-01">
                                     <p>Need Help Now? Call Us!</p>
-                                    <span>+91 458 654 528</span>
+                                    <span>+773 865 0789</span>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                 </div>
             </div>
         </div>
-        <div class="header-area style-02 header-bg-03" style="background-image:url(assets/img/header-slider/bg-02.png);">
+        <div class="header-area style-02 header-bg-03" style="background-image:url(assets/img/header-slider/slider-02.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
@@ -167,7 +167,7 @@
                                 <span class="or">OR</span>
                                 <div class="header-buttom-content style-01">
                                     <p>Need Help Now? Call Us!</p>
-                                    <span>+91 458 654 528</span>
+                                    <span>+773 865 0789</span>
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                         <div class="request-page-form-wrap style-01">
                             <div class="section-title">
                                 <h4 class="title">Get a Quote</h4>
-                                <p>Fill the form now</p>
+                                <p>Fill the form below</p>
                             </div>
                             <form action="request.html" class="request-page-form style-01" novalidate="novalidate">
                                 <div class="row">
