about section complete

--- a/index.html
+++ b/index.html
@@ -260,18 +260,11 @@
         </div>
     </div>
     <!-- Fully Cleaning Company area start  -->
-    <section class="cleaning-company-area padding-top-110 padding-bottom-90 bg-liteblue bg-image" style="background-image: url(assets/img/cleaning/bg.png);">
+    <section class="cleaning-company-area padding-top-110 padding-bottom-90 bg-liteblue bg-image">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title desktop-center margin-bottom-55">
-                        <div class="icon">
-                            <span class="line-one"></span>
-                            <span class="line-two"></span>
-                            <i class="flaticon-paint-brush"></i>
-                            <span class="line-three"></span>
-                            <span class="line-four"></span>
-                        </div>
                         <h3 class="title">Fully Cleaning Company</h3>
                         <p>We're known for one thing everywhere we go: excellent customer experiences. With our industry leading guarantees and our unwavering. </p>
                     </div>
@@ -281,7 +274,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="cleaning-single-item margin-bottom-30">
                         <div class="thumb">
-                            <img src="assets/img/cleaning/01.png" alt="">
+                            <img src="assets/img/cleaning/01.jpg" alt="">
                         </div>
                         <div class="icon">
                             <i class="flaticon-maid"></i>
@@ -295,7 +288,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="cleaning-single-item margin-bottom-30">
                         <div class="thumb">
-                            <img src="assets/img/cleaning/02.png" alt="">
+                            <img src="assets/img/cleaning/02.jpg" alt="">
                         </div>
                         <div class="icon">
                             <i class="flaticon-glove"></i>
@@ -309,7 +302,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="cleaning-single-item margin-bottom-30">
                         <div class="thumb">
-                            <img src="assets/img/cleaning/03.png" alt="">
+                            <img src="assets/img/cleaning/03.jpg" alt="">
                         </div>
                         <div class="icon">
                             <i class="flaticon-mop"></i>
@@ -323,7 +316,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="cleaning-single-item margin-bottom-30">
                         <div class="thumb">
-                            <img src="assets/img/cleaning/04.png" alt="">
+                            <img src="assets/img/cleaning/04.jpg" alt="">
                         </div>
                         <div class="icon">
                             <i class="flaticon-cleaning-spray"></i>
