results section complete

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         </div>
     </section>
     <!-- Counter Area -->
-    <div class="counterup-area bg-image bg-blue-03" style="background-image: url(assets/img/bg/02.png);">
+    <div class="counterup-area bg-image bg-blue-03" style="background-image: url(assets/img/bg/01.jpg);">
         <div class="container">
             <div class="counterup-wrapper">
                 <div class="row">
@@ -341,8 +341,8 @@
                                 <i class="flaticon-handwash"></i>
                             </div>
                             <div class="content">
-                                <div class="count-wrap"><span class="count-num">20</span>k+</div>
-                                <h4 class="title">Worldwide Clients</h4>
+                                <div class="count-wrap"><span class="count-num">10</span>+</div>
+                                <h4 class="title">Clients</h4>
                             </div>
                         </div>
                     </div>
@@ -352,8 +352,8 @@
                                 <i class="flaticon-wipe"></i>
                             </div>
                             <div class="content">
-                                <div class="count-wrap"><span class="count-num">7,079</span>+</div>
-                                <h4 class="title">Store Clients Products</h4>
+                                <div class="count-wrap"><span class="count-num">25</span>+</div>
+                                <h4 class="title">Homes And Businesses Cleaned</h4>
                             </div>
                         </div>
                     </div>
@@ -363,8 +363,8 @@
                                 <i class="flaticon-dust-pan-1"></i>
                             </div>
                             <div class="content">
-                                <div class="count-wrap"><span class="count-num">1043</span>+</div>
-                                <h4 class="title">Total Km Reach So Far</h4>
+                                <div class="count-wrap"><span class="count-num">100</span>%</div>
+                                <h4 class="title">Satisfied Customers</h4>
                             </div>
                         </div>
                     </div>
@@ -379,13 +379,6 @@
             <div class="row justify-content-center padding-bottom-45">
                 <div class="col-lg-8">
                     <div class="section-title desktop-center">
-                        <div class="icon">
-                            <span class="line-one"></span>
-                            <span class="line-two"></span>
-                            <i class="flaticon-paint-brush"></i>
-                            <span class="line-three"></span>
-                            <span class="line-four"></span>
-                        </div>
                         <h2 class="title">What Clients Say</h2>
                     </div>
                 </div>
