--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <div class="row justify-content-center padding-bottom-45">
                 <div class="col-lg-8">
                     <div class="section-title desktop-center">
-                        <h2 class="title">What Clients Say</h2>
+                        <h2 style='color: white' class="title">Testimonials</h2>
                     </div>
                 </div>
             </div>
@@ -388,7 +388,7 @@
                     <div class="testimonial-carousel-area">
                         <div class="testimonial-carousel">
                             <div class="single-testimonial-item">
-                                <div class="thumb bg-image" style="background-image: url(assets/img/testimonial/01.png);"></div>
+                                <div class="thumb bg-image" style="background-image: url(assets/img/testimonial/01.jpg);"></div>
                                 <div class="content">
                                     <div class="icon">
                                         <i class="flaticon-quote-left"></i>
@@ -410,7 +410,7 @@
                                 </div>
                             </div>
                             <div class="single-testimonial-item">
-                                <div class="thumb bg-image" style="background-image: url(assets/img/testimonial/02.png);"></div>
+                                <div class="thumb bg-image" style="background-image: url(assets/img/testimonial/02.jpg);"></div>
                                 <div class="content">
                                     <div class="icon">
                                         <i class="flaticon-quote-left"></i>
@@ -439,7 +439,7 @@
     </section>
     <!-- testimonial area end -->
     <!-- Our Event -->
-    <div class="contact-area bg-image padding-top-120 padding-bottom-120" style="background-image: url(assets/img/contact/bg.png);">
+    <!-- <div class="contact-area bg-image padding-top-120 padding-bottom-120" style="background-image: url(assets/img/contact/bg.png);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -449,9 +449,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Price Plan -->
-    <div class="price-plan-area bg-blue padding-top-110 padding-bottom-90">
+    <!-- <div class="price-plan-area bg-blue padding-top-110 padding-bottom-90">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -546,9 +546,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Team Section-->
-    <section class="creative-team-area padding-top-110 padding-bottom-85">
+    <!-- <section class="creative-team-area padding-top-110 padding-bottom-85">
         <div class="container">
             <div class="row justify-content-center padding-bottom-45">
                 <div class="col-lg-8">
@@ -635,9 +635,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- blog area start  -->
-    <section class="blog-area padding-top-115 padding-bottom-100 bg-liteblue">
+    <!-- <section class="blog-area padding-top-115 padding-bottom-100 bg-liteblue">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -719,39 +719,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- blog area end -->
     <!-- footer area start -->
-    <footer class="footer-area bg-blue-02 bg-image" style="background-image: url(assets/img/bg/footer-bg.png);">
+    <footer class="footer-area bg-blue-02 bg-image">
         <div class="footer-top padding-bottom-50 padding-top-80">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="footer-widget widget">
-                            <div class="about_us_widget style-01">
-                                <a href="index.html" class="footer-logo"> <img src="assets/img/logo-02.png" alt="footer logo"></a>
-                                <p>Sed do eiusmod tempor incididunt ut labore et dolore eiusmod tempor incididunt </p>
-                                <ul class="contact_info_list">
-                                    <li class="single-info-item">
-                                        <div class="icon">
-                                            <i class="flaticon-call"></i>
-                                        </div>
-                                        <div class="details">
-                                            +3 123 456 789
-                                        </div>
-                                    </li>
-                                    <li class="single-info-item">
-                                        <div class="icon">
-                                            <i class="flaticon-mail"></i>
-                                        </div>
-                                        <div class="details">
-                                            info@yourmail.com
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row" style='justify-content: center; text-align: center; margin: 0'>
                     <div class="col-lg-2 offset-lg-1 col-md-6 col-sm-6">
                         <div class="footer-widget widget widget_nav_menu">
                             <h4 class="widget-title">Useful links</h4>
@@ -798,7 +772,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-area-inner">
-                            &copy; Copyrights 2020 Neateller All rights reserved.
+                            &copy; Copyrights 2020 Superior Pristine Cleaning. All rights reserved.
                         </div>
                     </div>
                 </div>
