--- a/contact.html
+++ b/contact.html
@@ -59,53 +59,24 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="topbar-inner">
+                        <div class="topbar-inner style-01">
                             <div class="left-contnet">
                                 <ul class="info-items">
                                     <li><a href="#"><i class="flaticon-clock-1"></i>Mon - Fri: 09.00am - 10.00 pm</a></li>
                                 </ul>
                             </div>
                             <div class="right-contnet">
-                                <ul class="info-items">
-                                    <li><a href="#">Resources</a></li>
-                                    <li><a href="#">Schedule</a></li>
-                                    <li><a href="#">Service</a></li>
-                                    <li><a href="#">Terms & Conditions </a></li>
-                                    <li><a href="#">Coupons</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="info-bar">
-            <div class="info-bar-bottom style-01">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="info-bar-inner">
-                                <div class="left-content-area">
-                                    <div class="social-link">
-                                        <ul>
-                                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                            <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        </ul>
-                                    </div>
+                                <div class="social-link">
+                                    <ul>
+                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    </ul>
                                 </div>
-                                <div class="right-content-area">
-                                    <div class="info-bottom-right">
-                                        <ul class="info-items-02">
-                                            <li>
-                                                <h4 class="title">SCHEDULE YOUR APPOINTMENT TODAY</h4>
-                                                <a href="tel:000111555"> <span class="number">1-800-123-4567 </span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                <div class="btn-wrapper">
+                                    <a href="#" class="boxed-btn">Request a quote <i class="fas fa-long-arrow-alt-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -114,7 +85,7 @@
             </div>
         </div>
         <!-- support bar area end -->
-        <nav class="navbar navbar-area navbar-expand-lg has-topbar nav-style-02">
+        <nav class="navbar navbar-area navbar-expand-lg nav-style-01">
             <div class="container nav-container">
                 <div class="responsive-mobile-menu">
                     <div class="logo-wrapper">
@@ -128,49 +99,36 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bizcoxx_main_menu">
                     <ul class="navbar-nav">
-                        <li class="menu-item-has-children">
+                        <li>
                             <a href="#">Home</a>
-                            <ul class="sub-menu">
-                                <li><a href="index.html">Home 01</a></li>
-                                <li><a href="index-2.html">Home 02</a></li>
-                                <li><a href="index-3.html">Home 03</a></li>
-                                <li><a href="index-4.html">Home 04</a></li>
-                            </ul>
                         </li>
                         <li><a href="about.html">About</a></li>
-                        <li class="menu-item-has-children">
+                        <li>
                             <a href="#">Services</a>
-                            <ul class="sub-menu">
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="services-details.html">Services Details</a></li>
-                            </ul>
                         </li>
-                        <li class="menu-item-has-children">
-                            <a href="#">Blog</a>
-                            <ul class="sub-menu">
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-details.html">Blog Details</a></li>
-                            </ul>
-                        </li>
-                        <li class="current-menu-item"><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="nav-right-content">
-                    <div class="icon-part">
-                        <ul>
-                            <li class="cart"><a href="#"><i class="flaticon-shopping-cart"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="btn-wrapper">
-                        <a href="#" class="request-btn">Get a quote<i class="fas fa-long-arrow-alt-right"></i></a>
-                    </div>
+                    <ul>
+                        <li class="info-bar-item style-01">
+                            <div class="icon">
+                                <i class="flaticon-call"></i>
+                            </div>
+                            <div class="content">
+                                <span class="title">Call Us
+                            </span>
+                                <p class="details">+91 458 654 528</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
         <!-- navbar area end -->
     </div>
     <!-- breadcrumb Area -->
-    <div class="breadcrumb-area" style="background-image:url(assets/img/breadcrumb/01.png);">
+    <div class="breadcrumb-area" style="background-image:url(assets/img/breadcrumb/01.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -262,51 +220,12 @@
             </div>
         </div>
     </div>
-    <!-- Map Area -->
-    <div class="map-area">
-        <div class="container-fluid p-0">
-            <div class="row">
-                <div class="col-md-12 col-lg-12">
-                    <div class="contact_map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d233667.8223908687!2d90.27923710646989!3d23.780887457084543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1588510922243!5m2!1sen!2sbd" style="border:0; width: 100%; height: 100%;"
-                            allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- footer area start -->
-    <footer class="footer-area bg-blue-02 bg-image" style="background-image: url(assets/img/bg/footer-bg.png);">
+    <footer class="footer-area bg-blue-02 bg-image">
         <div class="footer-top padding-bottom-50 padding-top-80">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="footer-widget widget">
-                            <div class="about_us_widget style-01">
-                                <a href="index.html" class="footer-logo"> <img src="assets/img/logo-02.png" alt="footer logo"></a>
-                                <p>Sed do eiusmod tempor incididunt ut labore et dolore eiusmod tempor incididunt </p>
-                                <ul class="contact_info_list">
-                                    <li class="single-info-item">
-                                        <div class="icon">
-                                            <i class="flaticon-call"></i>
-                                        </div>
-                                        <div class="details">
-                                            +3 123 456 789
-                                        </div>
-                                    </li>
-                                    <li class="single-info-item">
-                                        <div class="icon">
-                                            <i class="flaticon-mail"></i>
-                                        </div>
-                                        <div class="details">
-                                            info@yourmail.com
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row" style='justify-content: center; text-align: center; margin: 0'>
                     <div class="col-lg-2 offset-lg-1 col-md-6 col-sm-6">
                         <div class="footer-widget widget widget_nav_menu">
                             <h4 class="widget-title">Useful links</h4>
@@ -353,7 +272,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-area-inner">
-                            &copy; Copyrights 2020 Neateller All rights reserved.
+                            &copy; Copyrights 2020 Superior Pristine Cleaning. All rights reserved.
                         </div>
                     </div>
                 </div>
