--- a/index.html
+++ b/index.html
@@ -223,22 +223,17 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
+                                            <input type="name" name="name" placeholder="Name" class="form-control" required="" aria-required="true">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
                                             <input type="email" name="email" placeholder="Email" class="form-control" required="" aria-required="true">
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="form-group">
-                                            <input type="text" name="city" placeholder="City of Departure" class="form-control" required="" aria-required="true">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <input type="text" name="weight" placeholder="Total Weight" class="form-control" required="" aria-required="true">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <input type="text" name="city" placeholder="Deliver City" class="form-control" required="" aria-required="true">
+                                            <input type="text" name="phone" placeholder="Phone Number" class="form-control" required="" aria-required="true">
                                         </div>
                                     </div>
                                     <div class="col-md-12">
@@ -265,7 +260,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title desktop-center margin-bottom-55">
-                        <h3 class="title">Fully Cleaning Company</h3>
+                        <h3 style='color: #1b1c1e' class="title">Fully Cleaning Company</h3>
                         <p>We're known for one thing everywhere we go: excellent customer experiences. With our industry leading guarantees and our unwavering. </p>
                     </div>
                 </div>
