frontend complete. Need to add api requests & backend

--- a/contact.html
+++ b/contact.html
@@ -100,11 +100,11 @@
                 <div class="collapse navbar-collapse" id="bizcoxx_main_menu">
                     <ul class="navbar-nav">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="index.html#about">About</a></li>
                         <li>
-                            <a href="#">Services</a>
+                            <a href="index.html#testimonials">Testimonials</a>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -118,7 +118,7 @@
                             <div class="content">
                                 <span class="title">Call Us
                             </span>
-                                <p class="details">+91 458 654 528</p>
+                                <p class="details">+773 865 0789</p>
                             </div>
                         </li>
                     </ul>
@@ -226,41 +226,14 @@
         <div class="footer-top padding-bottom-50 padding-top-80">
             <div class="container">
                 <div class="row" style='justify-content: center; text-align: center; margin: 0'>
-                    <div class="col-lg-2 offset-lg-1 col-md-6 col-sm-6">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-widget widget widget_nav_menu">
                             <h4 class="widget-title">Useful links</h4>
                             <ul>
                                 <li><a href="#">Home</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Service</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 offset-lg-1 col-md-6 col-sm-6">
-                        <div class="footer-widget widget widget_nav_menu">
-                            <h4 class="widget-title">Services</h4>
-                            <ul>
-                                <li><a href="#">Residential Cleaning
-                                </a></li>
-                                <li><a href="#">Commercial services</a></li>
-                                <li><a href="#">our Campaign</a></li>
-                                <li><a href="#">Businesss cleaning</a></li>
-                                <li><a href="#">Vehicle neat</a></li>
-                                <li><a href="#">Instituional service</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 offset-lg-1 col-md-6 col-sm-6">
-                        <div class="footer-widget widget widget_nav_menu">
-                            <h4 class="widget-title">Need Help?</h4>
-                            <ul>
-                                <li><a href="#">FAQ’S</a></li>
-                                <li><a href="#">Terms & Conditions</a></li>
-                                <li><a href="#">Support</a></li>
-                                <li><a href="#">Sumit Ticket</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="index.html#about">About</a></li>
+                                <li><a href="index.html#testimonials">Testimonials</a></li>
+                                <li><a href="index.html#contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
