changed content in contact page

--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-5">
                     <div class="content-area">
                         <div class="section-title padding-bottom-25">
-                            <h4 class="title">We offer 24/7 emergency service to all of our customers
+                            <h4 class="title">Give us a call or send us a message
                             </h4>
                         </div>
                         <div class="single-contact-item">
@@ -160,7 +160,7 @@
                             </div>
                             <div class="content">
                                 <span class="title">Phone</span>
-                                <p class="details">+458 123 657 <br> +415 103 557</p>
+                                <p class="details">773 865 0789</p>
                             </div>
                         </div>
                         <div class="single-contact-item">
@@ -169,17 +169,7 @@
                             </div>
                             <div class="content">
                                 <span class="title">Mail US</span>
-                                <p class="details">info@example.com <br> info@example.com</p>
-                            </div>
-                        </div>
-                        <div class="single-contact-item">
-                            <div class="icon">
-                                <i class="flaticon-pin"></i>
-                            </div>
-                            <div class="content">
-                                <span class="title">Address
-                            </span>
-                                <p class="details">475/W 13th Street, Cooper New York, <br> United States</p>
+                                <p class="details">info@example.com</p>
                             </div>
                         </div>
                     </div>
@@ -230,7 +220,7 @@
                         <div class="footer-widget widget widget_nav_menu">
                             <h4 class="widget-title">Useful links</h4>
                             <ul>
-                                <li><a href="#">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="index.html#about">About</a></li>
                                 <li><a href="index.html#testimonials">Testimonials</a></li>
                                 <li><a href="index.html#contact">Contact</a></li>
