fixed header bug

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <div class="header-inner">
                             <!-- header inner -->
                             <span class="subtitle">Residential & Commercial</span>
-                            <h2 class="title">We Are A Versatile Cleaning Company. Need Something Cleaned? Lets Talk.</h2>
+                            <h2 class="title">Need Something Cleaned? Lets Talk.</h2>
                             <div class="header-bottom">
                                 <div class="btn-wrapper desktop-left">
                                     <a href="#" class="boxed-btn">Request a quote</a>
