added header button redirect

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <h1 class="title">Find Out How We Keep It Clean</h1>
                             <div class="header-bottom">
                                 <div class="btn-wrapper desktop-left">
-                                    <a href="#" class="boxed-btn">Send Us A Message</a>
+                                    <a href="contact.html" class="boxed-btn">Send Us A Message</a>
                                 </div>
                                 <span class="or">OR</span>
                                 <div class="header-buttom-content style-01">
@@ -162,7 +162,7 @@
                             <h2 class="title">Need Something Cleaned? Lets Talk.</h2>
                             <div class="header-bottom">
                                 <div class="btn-wrapper desktop-left">
-                                    <a href="#" class="boxed-btn">Request a quote</a>
+                                    <a href="contact.html" class="boxed-btn">Request a quote</a>
                                 </div>
                                 <span class="or">OR</span>
                                 <div class="header-buttom-content style-01">
