--- a/index.html
+++ b/index.html
@@ -436,6 +436,63 @@
             </div>
         </div>
     </section>
+    <section id='about' class="cleaning-company-area padding-top-110 padding-bottom-90 bg-liteblue bg-image">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section-title desktop-center margin-bottom-55">
+                        <h3 style='color: #1b1c1e' class="title">Book Us</h3>
+                        <p>Fill the form below to submit a booking request and once you are done, a member of our team will reach out to confirm the appointment.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="request-page-form-wrap style-01">
+                        <div id="contact" class="section-title">
+                            <h4 class="title">Schedule A Cleaning</h4>
+                            <p>Fill the form below</p>
+                        </div>
+                        <form action="request.html" class="request-page-form style-01" novalidate="novalidate">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="name" name="name" placeholder="Name" class="form-control" required="" aria-required="true">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="email" name="email" placeholder="Email" class="form-control" required="" aria-required="true">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <input type="text" name="phone" placeholder="Phone Number" class="form-control" required="" aria-required="true">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <input type="datetime-local" id="datetime" name="birthdaytime" class="form-control" required="" aria-required="true">
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <textarea name="your-message" cols="40" rows="10" class="form-control" aria-required="true" aria-invalid="false" placeholder="Message"></textarea>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <input type="submit" value="Submit Request" class="submit-btn">
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- testimonial area end -->
     <!-- Our Event -->
     <!-- <div class="contact-area bg-image padding-top-120 padding-bottom-120" style="background-image: url(assets/img/contact/bg.png);">
